--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -7,9 +7,19 @@ on:
       - main
 
 jobs:
-  testing:
+  lint-check:
     runs-on: ubuntu-latest
     steps:
-      - name: testing sample
+      - name: Code Checkout
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+          cache: 'npm'
+          cache-dependency-path: starter/frontend/package-lock.json
+      - name: lint-check
         run: |
-          echo "Hello"
+          cd starter/frontend
+          npm ci
+          npm run lint
