feat: add build job for frontend

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  lint-check:
+  linting-frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Code Checkout
@@ -39,3 +39,17 @@ jobs:
           cd starter/frontend
           npm ci
           npm test
+  build-frontend:
+    needs: [linting-frontend, testing-frontend]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code Checkout
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+      - name: runs
+        run: |
+          cd starter/frontend
+          docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
