feat: refactor using a common job

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  linting-frontend:
+  setup-job:
     runs-on: ubuntu-latest
     steps:
       - name: Code Checkout
@@ -18,38 +18,23 @@ jobs:
           node-version: latest
           cache: 'npm'
           cache-dependency-path: starter/frontend/package-lock.json
-      - name: lint-check
+  linting-frontend:
+    needs: [setup-job]
+      - name: linting-frontend
         run: |
           cd starter/frontend
           npm ci
           npm run lint
   testing-frontend:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Code Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: latest
-          cache: 'npm'
-          cache-dependency-path: starter/frontend/package-lock.json
+    needs: [setup-job]
       - name: testing-frontend
         run: |
           cd starter/frontend
           npm ci
           npm test
-  build-frontend:
-    needs: [linting-frontend, testing-frontend]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Code Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: latest
-      - name: runs
+  building-frontend:
+    needs: [setup-job, linting-frontend, testing-frontend]
+      - name:  building-frontend
         run: |
           cd starter/frontend
           docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
