add test and build jobs for backend

--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -2,11 +2,6 @@ name: Backend Continuous Integration
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-    paths:
-      - 'starter/backend/**'
   pull_request:
     branches:
       - main
@@ -31,3 +26,36 @@ jobs:
           pip install flake8
           pipenv install
           pipenv run lint
+
+  testing-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code Checkout
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: testing-backend
+        run:  |
+          cd starter/backend
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pip install flake8
+          pipenv install
+          pipenv run test
+
+  building-backend:
+    needs: [linting-backend, testing-backend]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code Checkout
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: building-backend
+        run:  |
+          cd starter/backend
+          docker build --tag mp-backend:latest .
