--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -61,3 +61,5 @@ jobs:
             IMAGE_TAG=${{ github.sha }}  # Get the commit SHA
             kustomize edit set image frontend=435206346441.dkr.ecr.us-east-1.amazonaws.com/frontend:$IMAGE_TAG
             kustomize build | kubectl apply -f -
+
+            kubectl get svc -A
