--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -47,8 +47,8 @@ jobs:
         run: |
           cd starter/backend
           IMAGE_TAG=${{ github.sha }}
-          docker build --tag 435206346441.dkr.ecr.us-east-1.amazonaws.com/backend:IMAGE_TAG .
-          docker push 435206346441.dkr.ecr.us-east-1.amazonaws.com/backend:IMAGE_TAG
+          docker build --tag 435206346441.dkr.ecr.us-east-1.amazonaws.com/backend:$IMAGE_TAG .
+          docker push 435206346441.dkr.ecr.us-east-1.amazonaws.com/backend:$IMAGE_TAG
 
       - name: Update Kubeconfig
         run: aws eks --region us-east-1 update-kubeconfig --name cluster
